--- a/build.gradle
+++ b/build.gradle
@@ -18,18 +18,20 @@ repositories {
 dependencies {
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
 	testCompile group: 'junit', name: 'junit', version: '4.12'
-	testCompile group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
+	testCompile group: 'org.mockito', name: 'mockito-core', version: '2.0.5-beta'
+	testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '1.6.2'
+	testCompile group: 'org.powermock', name: 'powermock-api-mockito', version: '1.6.2'
 }
 
-test {
-	useJUnitPlatform()
-}
 
 jar {
 	manifest {
 		attributes(
 				'Main-Class': 'com.tomtom.console.Main'
 		)
+	}
+	from {
+		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
 	}
 	mainClassName = "com.tomtom.console.Main"
 }
